<resources>
    <string name="app_name">Trip O Meter</string>
    <string name="app_version_name">3.1.3 (El Dorado)</string>
    <string name="app_version_code">El Dorado is a legendary city or place believed to be overflowing with gold and riches. According to these stories, El Dorado was a city or kingdom located somewhere in the unexplored regions of South America, often associated with present-day Colombia or Venezuela.</string>
    <string name="app_release_date">Jul 2025</string>
    <string name="app_disclaim">The data shown in this app is approximate and should be used for a rough estimate only and may vary with actually observed values.</string>
    <string name="app_desc">This app calculates an estimate of fuel and cost needed for a trip</string>
    <string name="app_developer_info">Designed &amp; Developed at ae labs</string>

    <!-- Menu texts -->
    <string name="empty_text"/>
    <string name="menu_license">License</string>
    <string name="menu_fuel_price">Price</string>
    <string name="menu_calc">Calc</string>
    <string name="menu_trip_expenses">Expense</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>

    <!-- Messages used in the app -->
    <string name="str_trip_distance">Trip Distance</string>
    <string name="str_fuel_price">Fuel Price</string>
    <string name="str_mileage">Mileage</string>
    <string name="str_calculate">Calculate</string>
    <string name="str_hero_image">Hero image</string>

    <string name="str_expenses">Expenses</string>
    <string name="str_share">Share</string>
    <string name="str_total_expenses">Total Expenses </string>

    <string name="str_total_fuel_price">Total Fuel Price %s</string>
    <string name="str_total_fuel_needed">Fuel Needed %s</string>
    <string name="str_feature_placeholder">Feature Coming Soon</string>

    <!-- Add Expenses Dialog -->
    <string name="str_expense_amount">Amount</string>
    <string name="str_expense_contributor">Contributor</string>
    <string name="str_expense_members">Members</string>
    <string name="str_expense_category">Category</string>
    <string name="str_expense_note">Note</string>
    <string name="str_expense_add">Add Expense</string>

    <!-- Add Trip Dialog -->
    <string name="str_trip_name">Trip Name</string>
    <string name="str_trip_members">Members :</string>
    <string name="str_trip_add_member">Add Contact</string>
    <string name="str_trip_add">Create Trip</string>
    <string name="str_trip_add_title">Add New Trip</string>
    <string name="str_trip_delete_confirm">Delete this trip?</string>

    <!-- Edit Trip Dialog -->
    <string name="str_trip_edit">Update</string>

    <!-- Add Profile Dialog -->
    <string name="str_profile_select_title">Choose Default Profile</string>
    <string name="str_profile_select_text">To use Expenses, we need to know who you are. Please select from contacts list.</string>
    <string name="str_profile_select_pick">Select Profile</string>
    <string name="str_profile_select_button">Choose as Profile</string>

    <!-- Validation Error Messages -->
    <string name="str_error_empty_inputs">Please enter all data</string>
    <string name="str_error_no_mileage">Please enter correct mileage</string>

    <!-- Configuration Items, not to be translated-->
    <string name="github_source_visible_url" translatable="false">github.com/midhunhk/trip-o-meter</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message
        history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Permission Related -->
    <string name="str_permission_title">Permission Needed</string>
    <string name="str_permission_contacts_reason">Contacts access is needed for this feature</string>

    <!-- Empty list view texts -->
    <string name="str_empty_list_trips">Start by adding a trip</string>
    <string name="str_empty_list_trip_expense">Start by adding a trip expense</string>

    <!-- Trip popup menu -->
    <string name="str_trips_menu_delete_trip">Delete</string>
    <string name="str_trips_menu_edit_trip">Edit Trip Name</string>
    <string name="str_fab_description">FAB</string>

</resources>