<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ae.apps.tripmeter.fragments.PickProfileDialogFragment">

    <RelativeLayout
        android:id="@+id/pickProfileDialogHeader"
        style="@style/DialogHeaderStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_header_height"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/empty_text"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_face_profile"/>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/pickProfileDialogHeader"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_profile_select_title"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <TextView
            android:paddingTop="@dimen/padding_small"
            android:paddingBottom="@dimen/padding_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_profile_select_text"/>

        <Button
            android:id="@+id/btnSelectProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_profile_select_pick"/>

        <FrameLayout
            android:id="@+id/profileContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/card_padding"/>

        <Button
            android:id="@+id/btnChooseAsProfile"
            style="?attr/buttonBarPositiveButtonStyle"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_profile_select_button"/>

    </LinearLayout>
</RelativeLayout>