<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.ae.apps.tripmeter.activities.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <!-- Include the toolbar -->
        <include layout="@layout/toolbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                app:contentPadding="@dimen/cardview_content_padding">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/appIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_gravity="start"
                        android:layout_marginLeft="0dp"
                        android:layout_marginStart="0dp"
                        android:contentDescription="@string/empty_text"
                        android:padding="4dip"
                        android:src="@drawable/icon_app"/>

                    <TextView
                        android:id="@+id/appName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_margin="2dip"
                        android:layout_toEndOf="@+id/appIcon"
                        android:layout_toRightOf="@+id/appIcon"
                        android:text="@string/app_name"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/appVersion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/appName"
                        android:layout_gravity="start"
                        android:layout_margin="2dip"
                        android:layout_toEndOf="@+id/appIcon"
                        android:layout_toRightOf="@+id/appIcon"
                        android:text="@string/app_version_name"/>

                    <TextView
                        android:id="@+id/appReleaseDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/appVersion"
                        android:layout_gravity="start"
                        android:layout_margin="2dip"
                        android:layout_toEndOf="@+id/appIcon"
                        android:layout_toRightOf="@+id/appIcon"
                        android:text="@string/app_release_date"/>

                    <TextView
                        android:id="@+id/appDeveloper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="@string/app_developer_info"
                        android:layout_below="@id/appReleaseDate"
                        android:layout_toRightOf="@+id/appIcon"
                        android:layout_toEndOf="@+id/appIcon"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/appDeveloper"
                        android:layout_gravity="start"
                        android:layout_margin="2dip"
                        android:paddingTop="@dimen/cardview_content_padding"
                        android:text="@string/app_version_code"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                app:contentPadding="@dimen/cardview_content_padding">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dip"
                        android:layout_marginBottom="@dimen/fab_margin"
                        android:layout_marginTop="@dimen/fab_margin"
                        android:text="@string/app_desc"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="2dip"
                        android:text="@string/app_disclaim"/>

                    <Button
                        android:id="@+id/viewSourceCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:drawableLeft="@drawable/icon_github"
                        android:drawablePadding="@dimen/cardview_content_padding"
                        android:drawableStart="@drawable/icon_github"
                        android:gravity="center_vertical"
                        android:text="@string/github_source_visible_url"
                        android:textAllCaps="false"/>

                    <Button
                        android:id="@+id/viewLicense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:drawableLeft="@drawable/icon_text"
                        android:drawablePadding="@dimen/cardview_content_padding"
                        android:drawableStart="@drawable/icon_text"
                        android:gravity="center_vertical"
                        android:text="@string/menu_license"
                        android:textAllCaps="false"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>