<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.ae.apps.tripmeter.fragments.AddExpenseDialogFragment">

    <android.support.v7.widget.CardView
        android:id="@+id/headerCardContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:cardUseCompatPadding="true"
        app:contentPadding="@dimen/cardview_content_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Expense Amount -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".35"
                    android:text="@string/str_expense_amount"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/txtExpenseAmount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="right"
                    android:inputType="numberDecimal"/>
            </LinearLayout>

            <!-- Contributor, select from master list -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".35"
                    android:text="@string/str_expense_contributor"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/txtExpenseContributor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="right"
                    android:inputType="number"/>
            </LinearLayout>

            <!-- Members included -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".35"
                    android:text="@string/str_expense_members"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/txtExpenseMembers"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="right"
                    android:inputType="number"/>
            </LinearLayout>

            <Button
                android:id="@+id/btnAddExpense"
                android:text="@string/str_expense_add"
                android:layout_gravity="right|end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>
